@@ -1,9 +1,9 @@
-/*	$NetBSD: bozohttpd.c,v 1.44 2013/10/12 18:46:12 mbalmer Exp $	*/
+/*	$NetBSD: bozohttpd.c,v 1.45 2014/01/02 08:21:38 mrg Exp $	*/
 
 /*	$eterna: bozohttpd.c,v 1.178 2011/11/18 09:21:15 mrg Exp $	*/
 
 /*
- * Copyright (c) 1997-2013 Matthew R. Green
+ * Copyright (c) 1997-2014 Matthew R. Green
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -109,7 +109,7 @@
 #define INDEX_HTML		"index.html"
 #endif
 #ifndef SERVER_SOFTWARE
-#define SERVER_SOFTWARE		"bozohttpd/20130711"
+#define SERVER_SOFTWARE		"bozohttpd/20140102"
 #endif
 #ifndef DIRECT_ACCESS_FILE
 #define DIRECT_ACCESS_FILE	".bzdirect"
