@@ -1,9 +1,9 @@
-/*	$NetBSD: cgi-bozo.c,v 1.23 2013/10/12 18:46:12 mbalmer Exp $	*/
+/*	$NetBSD: cgi-bozo.c,v 1.24 2014/01/02 08:21:38 mrg Exp $	*/
 
 /*	$eterna: cgi-bozo.c,v 1.40 2011/11/18 09:21:15 mrg Exp $	*/
 
 /*
- * Copyright (c) 1997-2013 Matthew R. Green
+ * Copyright (c) 1997-2014 Matthew R. Green
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
